# aau_ubiss

./: README.md  download.py  publisher.py  util.py
board_support_crate/: CHANGELOG.md  LICENSE  pyproject.toml
board_support_crate/aau_ubiss/: __init__.py  _core.py  _sim7020e.py
board_support_crate/aauiot/: __init__.py  _core.py  _sim7020e.py
examples/: README.md  publisher_max.py  publisher_single_ts.py  usage.ipynb
fullsetup/: README.md  delete_ubiss.py  docker-compose.yml  docker_cleanup.sh  download.py  filehosting.txt  mongo_delete_database.py  mongo_show_collections.py  notes.txt  publisher_baseline.py  readme.md
fullsetup/containers/: .gitignore
fullsetup/mqtt/: delete_ubiss.py  download.py  group.csv  publisher_baseline.py  subscriber.py  util.py
fullsetup/mqtt/mongo/data/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-5741041859405050530.wt  collection-2-5741041859405050530.wt  collection-4-1244270631781772214.wt  collection-4-5741041859405050530.wt  collection-6-1244270631781772214.wt  collection-7-5741041859405050530.wt  index-1-5741041859405050530.wt  index-3-5741041859405050530.wt  index-5-1244270631781772214.wt  index-5-5741041859405050530.wt  index-6-5741041859405050530.wt  index-7-1244270631781772214.wt  index-8-5741041859405050530.wt  index-9-5741041859405050530.wt  sizeStorer.wt
fullsetup/mqtt/mongo/data/diagnostic.data/: metrics.2023-06-06T07-38-48Z-00000  metrics.interim  (+35 more)
fullsetup/mqtt/subscriber/: Dockerfile  subscriber.py  util.py
fullsetup/subscriber/: Dockerfile  defines.py  docker_build.sh  subscriber.py
(+3 files in other folders)
